Remove extra spacing on nested lists. Fix #29.

--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -27,6 +27,12 @@ ul, ol, dl, figure, address,
     margin-bottom: $spacing-unit;
 }
 
+dl, ol, ul {
+  dl, ol, ul {
+    margin-bottom: 0;
+  }
+}
+
 small {
   color: lighten($gray, 15%);
   font-size: 70%;
